--- a/src/server/Views/Authentication/LoginCallback.cshtml
+++ b/src/server/Views/Authentication/LoginCallback.cshtml
@@ -1,13 +1,60 @@
-<p>
-    Login callback
-</p>
+<div id="loading-message">
+    <div class="alert alert-primary d-flex align-items-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" style="width: 24px;" role="img" aria-label="Info:" viewBox="0 0 16 16"
+            fill="currentColor">
+            <path
+                d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+        </svg>
+        <div>
+            Preparing your session...
+        </div>
+    </div>
+</div>
+
+<div id="error-message" style="display: none;">
+    <div class="alert alert-danger d-flex align-items-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" style="width: 24px;" role="img" aria-label="Danger:" viewBox="0 0 16 16"
+            fill="currentColor">
+            <path
+                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+        </svg>
+        <div>
+            Oops! We had some trouble preparing your session. Click <a href="">here</a> to go back to the game page!
+        </div>
+    </div>
+</div>
 
 <script>
-    console.log(location.hash);
-    const parts = location.hash.split('=');
-    if (parts.length === 2 && parts[0] === '#access_token') {
-        const query = new URLSearchParams();
-        query.append('AccessToken', parts[1]);
-        location.href = `@Url.Action("LoginDebug", "Authentication")?${query.toString()}`;
+    window.addEventListener('load', async () => {
+        // TODO inject this
+        const gameUrl = 'http://localhost:35233/';
+
+        try {
+            const parts = location.hash.split('=');
+            if (parts.length === 2 && parts[0] === '#access_token') {
+                const query = new URLSearchParams();
+                query.append('AccessToken', parts[1]);
+
+                const response = await fetch(`/api/game/1/session/create/${parts[1]}`, { method: 'POST' });
+                const model = await response.json();
+
+                console.debug(`${gameUrl}#session_secret=${model.secret}`);
+                //location.replace(`${gameUrl}#session_secret=`) = `@Url.Action("LoginDebug", "Authentication")?${query.toString()}`;
+            }
+            else {
+                throw 'No access token found in fragment';
+            }
+        }
+        catch (error) {
+            console.error(error);
+            showError();
+        }
+    });
+
+    function showError() {
+        document.getElementById('loading-message').style.display = 'none';
+        document.getElementById('error-message').style.display = 'block';
     }
+    console.log(location.hash);
+
 </script>
