--- a/src/server/Views/Shared/_Layout.cshtml
+++ b/src/server/Views/Shared/_Layout.cshtml
@@ -5,26 +5,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - KoeKash</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body>
-    <header>
+<body class="min-vh-100 d-flex flex-column">
+    <div class="p-3 shadow-sm mb-6" style="background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);">
+        <h1 class="fw-bold">
+            T'aint Rocket - Leaderboard Server
+        </h1>
         <!-- Navigation -->
-    </header>
+    </div>
 
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container my-3 flex-grow-1">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - EFG
+    <footer class="border-top footer text-center text-muted">
+        <div class="container my-3">
+            &copy; @DateTime.Today.Year - Extreme Fusion Gaming
         </div>
     </footer>
 
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
