--- a/src/server/Views/Authentication/LoginCallback.cshtml
+++ b/src/server/Views/Authentication/LoginCallback.cshtml
@@ -1,3 +1,9 @@
+@inject IConfiguration configuration;
+
+@{
+    var gameUrl = configuration["Game:Url"];
+}
+
 <div id="loading-message">
     <div class="alert alert-primary d-flex align-items-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" style="width: 24px;" role="img" aria-label="Info:" viewBox="0 0 16 16"
@@ -19,15 +25,15 @@
                 d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
         </svg>
         <div>
-            Oops! We had some trouble preparing your session. Click <a href="">here</a> to go back to the game page!
+            Oops! We had some trouble preparing your session. Click <a href="@gameUrl">here</a> to
+            go back to the game page!
         </div>
     </div>
 </div>
 
 <script>
     window.addEventListener('load', async () => {
-        // TODO inject this
-        const gameUrl = 'http://localhost:35233/';
+        const gameUrl = '@gameUrl';
 
         try {
             const parts = location.hash.split('=');
@@ -38,8 +44,7 @@
                 const response = await fetch(`/api/game/1/session/create/${parts[1]}`, { method: 'POST' });
                 const model = await response.json();
 
-                console.debug(`${gameUrl}#session_secret=${model.secret}`);
-                //location.replace(`${gameUrl}#session_secret=`) = `@Url.Action("LoginDebug", "Authentication")?${query.toString()}`;
+                location.replace(`${gameUrl}#session_secret=${model.secret}`);
             }
             else {
                 throw 'No access token found in fragment';
@@ -55,6 +60,4 @@
         document.getElementById('loading-message').style.display = 'none';
         document.getElementById('error-message').style.display = 'block';
     }
-    console.log(location.hash);
-
 </script>
