--- a/src/server/Views/Authentication/LoginCallback.cshtml
+++ b/src/server/Views/Authentication/LoginCallback.cshtml
@@ -31,20 +31,39 @@
     </div>
 </div>
 
+<div id="success-message" style="display: none;">
+    <div class="alert alert-success d-flex align-items-center" role="alert">
+        <svg class="bi flex-shrink-0 me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="width: 24px;"
+            fill="currentColor">
+            <path
+                d="M7.493 18.75c-.425 0-.82-.236-.975-.632A7.48 7.48 0 016 15.375c0-1.75.599-3.358 1.602-4.634.151-.192.373-.309.6-.397.473-.183.89-.514 1.212-.924a9.042 9.042 0 012.861-2.4c.723-.384 1.35-.956 1.653-1.715a4.498 4.498 0 00.322-1.672V3a.75.75 0 01.75-.75 2.25 2.25 0 012.25 2.25c0 1.152-.26 2.243-.723 3.218-.266.558.107 1.282.725 1.282h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 01-2.649 7.521c-.388.482-.987.729-1.605.729H14.23c-.483 0-.964-.078-1.423-.23l-3.114-1.04a4.501 4.501 0 00-1.423-.23h-.777zM2.331 10.977a11.969 11.969 0 00-.831 4.398 12 12 0 00.52 3.507c.26.85 1.084 1.368 1.973 1.368H4.9c.445 0 .72-.498.523-.898a8.963 8.963 0 01-.924-3.977c0-1.708.476-3.305 1.302-4.666.245-.403-.028-.959-.5-.959H4.25c-.832 0-1.612.453-1.918 1.227z" />
+        </svg>
+
+        <div>
+            Succesfully created a session for you, you can close this tab and return to the game!
+        </div>
+    </div>
+</div>
+
 <script>
     window.addEventListener('load', async () => {
         const gameUrl = '@gameUrl';
 
         try {
+            const sessionSecret = localStorage.getItem("SESSION_SECRET");
+            if (!sessionSecret || !/^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$/i.exec(sessionSecret)) {
+                throw 'No session secret found in local storage';
+            }
+
             const parts = location.hash.split('=');
             if (parts.length === 2 && parts[0] === '#access_token') {
                 const query = new URLSearchParams();
                 query.append('AccessToken', parts[1]);
 
-                const response = await fetch(`/api/game/1/session/create/${parts[1]}`, { method: 'POST' });
+                const response = await fetch(`/api/game/1/session/${sessionSecret}/create/${parts[1]}`, { method: 'POST' });
                 const model = await response.json();
 
-                location.replace(`${gameUrl}#session_secret=${model.secret}`);
+                showSuccess();
             }
             else {
                 throw 'No access token found in fragment';
@@ -58,6 +77,13 @@
 
     function showError() {
         document.getElementById('loading-message').style.display = 'none';
+        document.getElementById('success-message').style.display = 'none';
         document.getElementById('error-message').style.display = 'block';
+    }
+
+    function showSuccess() {
+        document.getElementById('loading-message').style.display = 'none';
+        document.getElementById('error-message').style.display = 'none';
+        document.getElementById('success-message').style.display = 'block';
     }
 </script>
