Auto close login callback tab

--- a/src/server/Views/Authentication/LoginCallback.cshtml
+++ b/src/server/Views/Authentication/LoginCallback.cshtml
@@ -25,8 +25,9 @@
                 d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
         </svg>
         <div>
-            Oops! We had some trouble preparing your session. Click <a href="@gameUrl">here</a> to
-            go back to the game page!
+            Oops! We had some trouble preparing your session. <span class="fw-bold" id="error-message-close-tip"
+                style="opacity: 0; transition: opacity 0.3s ease-in 0s;">You can close this tab and return to the
+                game.</span>
         </div>
     </div>
 </div>
@@ -40,7 +41,9 @@
         </svg>
 
         <div>
-            Succesfully created a session for you, you can close this tab and return to the game!
+            Succesfully created a session for you. <span class="fw-bold" id="success-message-close-tip"
+                style="opacity: 0; transition: opacity 0.3s ease-in 0s;">You can close this tab and return to the
+                game!</span>
         </div>
     </div>
 </div>
@@ -64,6 +67,13 @@
                 const model = await response.json();
 
                 showSuccess();
+
+                setTimeout(() => {
+                    window.close();
+                    if (!window.closed) {
+                        document.getElementById("success-message-close-tip").style.opacity = 100;
+                    }
+                }, 3000)
             }
             else {
                 throw 'No access token found in fragment';
@@ -79,6 +89,13 @@
         document.getElementById('loading-message').style.display = 'none';
         document.getElementById('success-message').style.display = 'none';
         document.getElementById('error-message').style.display = 'block';
+
+        setTimeout(() => {
+            window.close();
+            if (!window.closed) {
+                document.getElementById("error-message-close-tip").style.opacity = 100;
+            }
+        }, 5000);
     }
 
     function showSuccess() {
